5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1807_2571.log
== TEST (2019-06-07 22:56:51) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[i] != "a"):
		no_a = l + s[i]
print(no_a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(s[i] != "a"):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 22:57:40) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[i] != "a"):
		no_a = l + s[i]
print(no_a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(s[i] != "a"):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 22:58:10) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[ch] != "a"):
		no_a = l + s[i]
print(no_a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    no_a = l + s[i]
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 22:58:37) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[ch] != "a"):
		no_a = l + s[ch]
print(no_a)
-- OUTPUT:
m
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 22:59:18) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[ch] != "a"):
		no_a = l + s[ch]
		print(no_a)
-- OUTPUT:
i
n
s
t
i
t
u
t
o
_
d
e
_
c
o
m
p
u
t
c
o
-
i
c
o
m
p
-
u
f
m
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:01:45) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[ch] != "a"):
		l = l + s[ch]
print(l)
-- OUTPUT:
instituto_de_computco-icomp-ufm
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 23:02:09) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[ch] != "a"):
		l = l + s[ch]
print(l)
-- EXECUTION TIME:
0.903975
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
instituto_de_computco-icomp-ufm
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:03:06) 
-- CODE:
s = input("um string:").lower()
l = ""
for ch in range(len(s)):
	if(s[ch] != "a"):
		l = l + s[ch]
print(l)
-- OUTPUT:
instituto_de_computco-icomp-ufm
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:04:36) 
-- CODE:
s = input("um string:")
l = ""
for ch in range(len(s)):
	if(s[ch] != "a" or s[ch] != "A"):
		l = l + s[ch]
print(l)
-- OUTPUT:
Instituto_de_Computacao-ICOMP-UFAM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:05:00) 
-- CODE:
s = input("um string:")
l = ""
for ch in range(len(s)):
	if(s[ch] != "a" and s[ch] != "A"):
		l = l + s[ch]
print(l)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-07 23:05:14) 
-- CODE:
s = input("um string:")
l = ""
for ch in range(len(s)):
	if(s[ch] != "a" and s[ch] != "A"):
		l = l + s[ch]
print(l)
-- OUTPUT:
Instituto_de_Computco-ICOMP-UFM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-07 23:05:39) 
-- CODE:
s = input("um string:")
l = ""
for ch in range(len(s)):
	if(s[ch] != "a" and s[ch] != "A"):
		l = l + s[ch]
print(l)
-- EXECUTION TIME:
0.682611
-- TEST CASE 1:
---- input:
Instituto_de_Computacao-ICOMP-UFAM
---- correct output:
Instituto_de_Computco-ICOMP-UFM
---- user output:
Instituto_de_Computco-ICOMP-UFM
-- TEST CASE 2:
---- input:
a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-a-aa-a-a-a-a-a-a-a-a-a-a
---- correct output:
-----------------------------
---- user output:
-----------------------------
-- TEST CASE 3:
---- input:
.aaaaaaaaaaaaaaaaaaaaa.bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb.aaaaaaaaaaaaaaaaa.
---- correct output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
---- user output:
..bbbbbbbbbbbbbbbbbbb.ccccccccccccccccccccccc.bbbbbbbbbbbbbbbbbb..
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
